# gup

./: .gitignore  Cargo.toml  Changes.md  Config.toml  README.md
.github/workflows/: rust.yml
src/: build.rs  cli.rs  config.rs  main.rs  pdm.rs
