[package]
name = "gup"
version = "0.1.0"
edition = "2024"

[dependencies]
halcyon-lib = { git = "https://git.lgatlin.dev/logan/Halcyon.git", branch = "stable" }
clap = {version = "4.5", features=["derive"]}
colored = "3.0.0"
clap-verbosity-flag = "3.0.4"
url = "2.5.7"
git2 = "0.20.2"
human-panic = "2.0.3"
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.228"
toml = "0.9.7"
regex = "1.11.3"
